namespace java  tech.aroma.banana.thrift.service
namespace cocoa BananaService_

include "Authentication.thrift"
include "Banana.thrift"
include "Endpoint.thrift"
include "Exceptions.thrift"

typedef i32 int
typedef i64 long
typedef i64 timestamp

service BananaService
{

}
